<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Latihan_3">

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="411dp"
        android:layout_height="207dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gunung_kelud" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/judul_tugas3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gambar" />

    <TextView
        android:id="@+id/isi"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/isi_tugas3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="136dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="127dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isi"
        app:srcCompat="@drawable/darman" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="69dp"
        android:text="@string/nama"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/foto"
        app:layout_constraintTop_toBottomOf="@+id/button_l3" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:text="@string/nim"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/foto"
        app:layout_constraintTop_toBottomOf="@+id/nama" />

    <Button
        android:id="@+id/button_l3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="23dp"
        android:text="SUBMIT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isi" />

</androidx.constraintlayout.widget.ConstraintLayout>