<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Latihan_5a">

    <Button
        android:id="@+id/button_l5"
        android:layout_width="340dp"
        android:layout_height="73dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="162dp"
        android:backgroundTint="#8BC34A"
        android:text="Panggil Activity Dua"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="193dp"
        android:layout_height="190dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/darman"
        app:layout_constraintEnd_toStartOf="@+id/nim"
        app:layout_constraintStart_toEndOf="@+id/nim"
        app:layout_constraintTop_toBottomOf="@+id/dibuat" />

    <TextView
        android:id="@+id/dibuat"
        android:layout_width="233dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="162dp"
        android:text="@string/dibuat"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="171dp"
        android:layout_height="63dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nama"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/dibuat" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="171dp"
        android:layout_height="63dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nim"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/nama" />

</androidx.constraintlayout.widget.ConstraintLayout>